@@ -1,3 +1,8 @@
+2000-02-24  Bruno Haible  <haible@clisp.cons.org>
+
+        * src/iconv.c (iconv): Don't write beyond the end of the output buffer.
+          Reported by Edmund Grimley Evans <edmundo@rano.org>.
+
 2000-02-22  Bruno Haible  <haible@clisp.cons.org>
 
         * src/utf7.h (direct_tab, xdirect_tab): Treat tab like space.
